Fix search field style on iPhone & iPad

--- a/app/assets/stylesheets/cookrstrap.css.scss
+++ b/app/assets/stylesheets/cookrstrap.css.scss
@@ -71,6 +71,10 @@
   padding-top: 0;
 }
 
+input[type="search"] {
+  -webkit-appearance: none;
+}
+
 /**
  * Icons
  */
